# exr-gallery

./: .gitignore  LICENSE  README.md  generate_samples.py  generate_viewer_samples.py  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
docs/: viewer-spec.md
public/viewer/: testpattern_gray.exr  testpattern_rgb.exr
src/: App.css  App.jsx  ExrImage.jsx  main.jsx
src/pages/: Comparator.jsx  Gallery.jsx  Viewer.jsx
